CVS
- Added support for parameter typing to match PHP data to Ingres types [grantc 28-11-05]
- Added preliminary UTF-16 support [grantc 28-11-05] 
- Added global to configure connection timeout [grantc 15-12-05]

version 1.2.1
- Added connection tracing [grantc 21-11-05]
- Builds against PHP 4.4 [grantc 21-11-05]

version 1.2
- Fixed memory allocation when handling null blobs [grantc 04-10-05]
- Fix php_ii_fetch() to allow the fetching of multiple blobs [grantc 22-09-05]
- Fix php_ii_convert_data() to address correct indicies [grantc 22-09-05]
- Added preliminary support for BLOB fetching [grantc 21-09-05]
- Fixed double memory free when working with results [grantc 21-09-05]
- Fix non-parameterized procedures so they run [grantc 09-09-05]
- Added support for ISO4 dates [grantc 07-09-05]
- Added support for specifying the scope of login credentials for remote
connections [grantc 02-09-05]
- Added support for specifying the stucture of new tables and indexes [grantc 02-09-05]
- Added support for specifying the precision of Ingres floats [grantc 02-09-05]
- Added ingres_set_environment() [grantc 02-09-05]
- Fixed ingres_connect() to allow locale params to function without a cast [grantc 01-09-05]
- Extension now builds with GCC 4.x [grantc 29-08-05]
- Added parameter support to ingres_query(), uses '?' for param markers [grantc 23-08-05]

version 1.1
- Added support for a number of connection options [grantc 30-06-05]
- Added Mode support to cursor selects [grantc 28-06-05]
- Added named parameter support to database procedures [grantc 27-06-05] 
- Added support for procedures without parameters. Handles row producing
procedures [grantc 23-06-05]
- No longer EXPERIMENTAL [grantc 15-06-05]
- Added functions ingres_prepare(), ingres_execute(), ingres_cursor() [grantc 15-06-05]
- Added some simple tests [grantc 15-06-05]
- Added CHANGELOG to keep better track of changes [grantc 30-05-05]
- Added support for reporting/testing Ingres error messages [grantc 30-05-05]
